# newsfeed

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.py  newsfeed.py  newsfeed_app_config.py  pyproject.toml  requirements.txt
app/: NewsFeed.py  TextFormatter.py  XmlFeedParser.py  __init__.py  article_views.py  exceptions.py  main.py  news_service.py  news_types.py  text_parsers.py  ui_state.py  xml_feed_parser.py
newsfeed_config/: __init__.py  config.default.json
